Fixing grammar throughout the website

--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@
                                 </div>
                                 <div class="column-wrapper_item fl-wrap">
                                     <div class="column-wrapper_text fl-wrap">
-                                        <p>The Olivier brand came to life when two lifelong friends, who have been watch enthusiasts almost as long, decided to start making the watches that they couldn't get on the market, whether because of availability, or finances. The other reason was to learn more about the watchmaking industry, how watches work, and how we can make them better. While watches are as popular as ever, the watchmaking trade has been sadly and slowly dying out. Good thing there's still nerds like us out there.
+                                        <p>The Olivier brand came to life when two lifelong friends, who have been watch enthusiasts for almost as long, decided to start making the watches they couldn't get on the market, whether because of availability or finances. The other reason was to learn more about the watchmaking industry, how watches work, and how we can improve them. While watches are as popular as ever, the watchmaking trade has been sadly and slowly dying out. It's a good thing there are still nerds like us out there.
                                         </p>
-                                        <p>Our goal is to make reliable and precise automatic watches, yet affordable to most, with designs you're actually looking for. Want it thicker, thinner, smaller, larger, monotone, colorful or even see-through? We've got it all. We use tried-and-tested Seiko NH movements that bring out the best bang for the buck when it comes to performance, and high-quality cases and bracelets with size ratios that will fit your hand the way a watch is supposed to.</p>
+                                        <p>Our goal is to make reliable and precise automatic watches, yet affordable to most, with designs you're actually looking for. Do you want it thicker, thinner, smaller, bigger, monotone, colorful, or even see-through? We've got it all. We use tried-and-tested Seiko NH movements that bring out the best bang for the buck in performance and high-quality cases and bracelets with size ratios that will fit your hand the way a watch is supposed to.</p>
                                         <p>A watch doesn't have to cost thousands to be exceptional and tailored to your needs and wants.</p>
                                     </div>
                                 </div>
@@ -119,8 +119,8 @@
                                                 </div>
                                                 <div class="serv-text">
                                                     <h4><a>Commission build</a></h4>
-                                                    <p>Let us build you the watch that you dream of. It's easy, all you have to do is design it.</p>
-                                                    <p>You design the watch, we outsource all the parts, and build and regulate your new timepiece. Or, you provide the parts, we check them for compatibility, and then work our magic.</p>
+                                                    <p>Let us build you the watch that you dream of. It's easy. All you have to do is design it.</p>
+                                                    <p>You design the watch, we outsource all the parts, and we build and regulate your new timepiece. Or, if you provide the parts, we check them for compatibility and then work our magic.</p>
                                                     <div class="serv-price">Prices from<strong style="color:white;"> $125</strong></div>
                                                 </div>
                                             </div>
@@ -132,8 +132,8 @@
                                                 </div>
                                                 <div class="serv-text">
                                                     <h4><a>Watch modification</a></h4>
-                                                    <p>Bored of your existing Seiko's hands, dial, or bezel insert and want to change it up a little? Or simply want to make it look like new? We've got you.</p>
-                                                    <p>Simply send us your watch and provide the parts for the modification, or choose the parts while we outsource them, and let us make your timepiece shine.</p>
+                                                    <p>Are you bored of your existing Seiko's hands, dial, or bezel insert and want to change it up a little? Or do you want to make it look like new? We've got you.</p>
+                                                    <p>Send us your watch and provide the parts for the modification, or choose the parts while we outsource them and let us make your timepiece shine.</p>
                                                     <div class="serv-price">Prices from<strong style="color:white;"> $50</strong> to <strong style="color:white;"> $250</strong></div>
                                                 </div>
                                             </div>
@@ -145,15 +145,15 @@
                                                 </div>
                                                 <div class="serv-text">
                                                     <h4><a>Watch service</a></h4>
-                                                    <p>Is your Seiko not performing the way you'd like? Let us service your watch and bring it back to life. Or, we can simply upgrade your existing Seiko 4R35 with an NH35 for more reliability AND hacking seconds.</p>
-                                                    <p>Whether it's a minor intervention, or completely changing the movement, we  can do it.</p>
+                                                    <p>Is your Seiko not performing the way you'd like? Let us service your watch and bring it back to life. Or, we can upgrade your existing Seiko 4R35 with an NH35 for more reliability AND hacking seconds.</p>
+                                                    <p>Whether it's a minor intervention or completely changing the movement, we can do it.</p>
                                                     <div class="serv-price">Prices from <strong style="color:white;"> $80</strong> to <strong style="color:white;"> $300</strong></div>
                                                 </div>
                                             </div>
                                             <!-- serv-item end -->
                                         </div>
                                         <!-- serv-wrap end -->
-                                        <p>Although the watch industry is enormous, we can be picky and it's sometimes hard to find exactly what you want. Watches and people are both very individual, so don't hesitate to contact us regarding any questions or inquiries you might have. We'll try to help and guide you the best we can.</p>
+                                        <p>Although the watch industry is enormous, we can be picky, and it's sometimes hard to find exactly what you want. Watches and people are both very individual, so don't hesitate to contact us regarding any questions or inquiries you might have. We'll try to help and guide you the best we can.</p>
                                     </div>
                                 </div>
                             </div>
