--- a/contacts.html
+++ b/contacts.html
@@ -75,7 +75,7 @@
                             <div class="container small-container">
                                 <div class="section-title fl-wrap">
                                     <h3>Send us a message</h3>
-                                    <h4>For any inquiries you might have, or if you wish to commission a build, feel free to contact us through the form below.</h4>
+                                    <h4>For any inquiries you might have or if you wish to commission a build, feel free to contact us through the form below.</h4>
                                 </div>
                                         <div id="contact-form" class="fl-wrap">
                                             <div id="message"></div>
