--- a/royal-blue-seiko-datejust.html
+++ b/royal-blue-seiko-datejust.html
@@ -154,10 +154,10 @@
                             </div>
                             <div class="container small-container">
                                 <div class="single_det_wrap">
-                                    <p>The royal blue dial is even more striking in person, and pictures can’t do it justice. The fluted bezel, along with the sunburst dial and its Roman numerals, play under the lights beautifully. 
+                                    <p>The royal blue dial is even more striking in person, and pictures can’t do it justice. The fluted bezel, along with the sunburst dial and its Roman numerals, plays under the lights beautifully. 
                                     </p>
-                                    <p>One fun fact to know is that the 4 hour marker, which should be spelled as ‘IV’ instead of ‘IIII,’ is called ‘the watchmaker’s four.’</p>
-                                    <p>The president steel bracelet is the ultimate symbol of comfort and class, and has a hidden clasp that adds to the minimalistic look of this timepiece.</p>
+                                    <p>One fun fact is that the 4-hour marker, which should be spelled as ‘IV’ instead of ‘IIII,’ is called ‘the watchmaker’s four.’</p>
+                                    <p>The president steel bracelet is the ultimate symbol of comfort and class and has a hidden clasp that adds to the minimalistic look of this timepiece.</p>
                                     <p>Based on the reliable and precise Seiko NH35 automatic movement, this timepiece won’t stop ticking easily.</p>
                                     <div class="caption-wrap   det-anim">
                                         <ul>
