--- a/seiko-explorer.html
+++ b/seiko-explorer.html
@@ -154,8 +154,8 @@
                             </div>
                             <div class="container small-container">
                                 <div class="single_det_wrap">
-                                    <p>This Explorer homage, like the original, is so simple, yet so gorgeous. The beauty lies in its simplicity – only hands and markers, with 3, 6, and 9 hours in lettering.
-                                    The beloved and highly legible Mercedes hands and markers come equipped with blue lume.</p>
+                                    <p>This Explorer homage, like the original, is so simple yet so gorgeous. The beauty lies in its simplicity – only hands and markers, with 3, 6, and 9 hours in lettering.
+                                    The beloved and highly legible Mercedes hands and markers come equipped with a blue lume.</p>
                                     <p>Based on the reliable and precise Seiko NH35 automatic movement, this timepiece is ready for any adventure you throw at it.</p>
                                     <div class="caption-wrap   det-anim">
                                         <ul>
