--- a/the-gulfmaster.html
+++ b/the-gulfmaster.html
@@ -153,7 +153,7 @@
                             </div>
                             <div class="container small-container">
                                 <div class="single_det_wrap">
-                                    <p>Inspired by the legendary 1968 Ford GT40 Gulf, and paired with the Japanese finest’ Asanoha dial from Komoworks, this timepiece is truly something special and sophisticated. 
+                                    <p>Inspired by the legendary 1968 Ford GT40 Gulf and paired with the Japanese finest’ Asanoha dial from Komoworks, this timepiece is exceptional and sophisticated.
                                     </p>
                                     <p>The playful trademark colors on the bezel and dial make sure that the aggregate of triangles stands out. It is one of the most popular traditional patterns often seen on the Japanese kimono. They symbolize strength and beauty, and this dial represents resilience, power, and strength.</p>
                                     <p>Based on the reliable and precise Seiko NH35 automatic movement, this timepiece won’t stop ticking easily.</p>
