--- a/the-stealth-skeleton.html
+++ b/the-stealth-skeleton.html
@@ -154,9 +154,9 @@
                             </div>
                             <div class="container small-container">
                                 <div class="single_det_wrap">
-                                    <p>This yachmaster homage is bold and flashy, yet elegant, and comes in 40mm, for most a perfect size.
+                                    <p>This Yachtmaster homage is bold and flashy, yet elegant, and comes in 40mm, for most, a perfect size.
                                     </p>
-                                    <p>The stealth black unidirectional rotating bezel offers a timer feature - a trademark of diver watches. Simply rotate the marker to the minute hand and follow the progressing time through the bezel. Hands come equipped with C3 Super-LumiNova Lume in green, the brightest of all lume colors, so you won’t miss those when in stealth mode.</p>
+                                    <p>The stealth black unidirectional rotating bezel offers a timer feature - a trademark of diver watches. Simply turn the marker to the minute hand and follow the progressing time through the bezel. Hands come equipped with C3 Super-LumiNova Lume in green, the brightest of all lume colors, so you won’t miss those when in stealth mode.</p>
                                     <p>The high-quality FKM rubber strap from Monstraps in black with rose gold tang buckle ensures the ideal balance between comfort and style - it’s suitable for any occasion.</p>
                                     <p>Based on the reliable and precise Seiko NH70 skeletonized automatic movement, this timepiece won’t stop ticking easily, and you’ll be able to take a look at the movement at all times. </p>
                                     <div class="caption-wrap   det-anim">
