--- a/yellow-gold-datejust-the-tony.html
+++ b/yellow-gold-datejust-the-tony.html
@@ -154,8 +154,7 @@
                             </div>
                             <div class="container small-container">
                                 <div class="single_det_wrap">
-                                    <p>Marone! The dial is even more beautiful in person, and pictures can’t do it justice. The fluted pattern, the same style as the bezel, plays under the lights beautifully. We call it the 'pasta fazool' pattern in this case.
-                                    The president steel bracelet is the ultimate symbol of comfort and class, and has a hidden clasp that adds to the minimalistic look of this timepiece.</p>
+                                    <p>Marone! The dial is even more beautiful in person, and pictures can't do it justice. The fluted pattern, the same style as the bezel, plays under the lights beautifully. We call it the 'pasta fazool' pattern in this case. The president steel bracelet is the ultimate symbol of comfort and class and has a hidden clasp that adds to the minimalistic look of this timepiece.</p>
                                     <p>Based on the reliable and precise Seiko NH35 automatic movement, this timepiece isn’t going to stop ticking easily.</p>
                                     <div class="caption-wrap   det-anim">
                                         <ul>
