Trying to fix contact form

--- a/contacts.html
+++ b/contacts.html
@@ -81,10 +81,10 @@
                                             <div id="message"></div>
                                             <form  class="custom-form" action="php/contact.php" name="contactform" id="contactform">
                                                 <fieldset>
-                                                    <input type="text" name="name" id="name" placeholder="Your name *" value="">
-                                                    <input type="text"  name="email" id="email" placeholder="Your email *" value="">
-                                                    <textarea name="comments"  id="comments" cols="40" rows="3" placeholder="Your message:"></textarea>
-                                                    <button class="btn float-btn flat-btn color-bg" id="submit">Send </button>
+                                                    <input type="text" name="name" id="name" placeholder="Your Name *" value="">
+                                                    <input type="text"  name="email" id="email" placeholder="Email Address *" value="">
+                                                    <textarea name="comments"  id="comments" cols="40" rows="3" placeholder="Your Message:"></textarea>
+                                                    <button class="btn float-btn flat-btn color-bg" id="submit">Send Message </button>
                                                 </fieldset>
                                             </form>
                                         </div>
