--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                             <div class="bg"  data-bg="images/bg/olivier-watches-seiko-roman-datejust-royal-blue.jpg" data-swiper-parallax="20%"></div>
                                             <div class="overlay"></div>
                                             <div class="thumb-info">
-                                                <h3 style="font-weight: 600;"><a href="royal-blue-seiko-datejust.html" class="ajax">Seiko  Royal Blue Datejust</a></h3>
+                                                <h3 style="font-weight: 600;"><a href="royal-blue-seiko-datejust.html" class="ajax">  Royal Blue Datejust</a></h3>
                                                 <p>"Midnight blue is the only color that can ever compete with black." - Christian Dior</p>
                                                 <a href="royal-blue-seiko-datejust.html" class="ajax fs-slider-item_btn">View case</a>
                                             </div>
