--- a/seiko-explorer.html
+++ b/seiko-explorer.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5DJ02631J5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5DJ02631J5');
+</script>
         <!--=============== basic  ===============-->
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
