--- a/contacts.html
+++ b/contacts.html
@@ -88,12 +88,12 @@
                         </div>
                         <div id="contact-form" class="fl-wrap">
                             <div id="message"></div>
-                            <form class="custom-form" action="php/contact.php" name="contactform" id="contactform" method="POST">
+                            <form class="custom-form" action="php/contact.php" name="contactform" id="contactform">
                                 <fieldset>
                                     <input type="text" name="name" id="name" placeholder="Your name *" value="">
                                     <input type="text"  name="email" id="email" placeholder="Your email *" value="">
                                     <textarea name="comments"  id="comments" cols="40" rows="3" placeholder="Your message:"></textarea>
-                                    <button onclick="document.getElementById('contact-form').submit();" class="btn float-btn flat-btn color-bg" id="submit" type="submit">Send msg </button>
+                                    <button class="btn float-btn flat-btn color-bg" id="submit" type="submit">Send </button>
                                 </fieldset>
                             </form>
                         </div>
