--- a/contacts.html
+++ b/contacts.html
@@ -93,7 +93,7 @@
                                     <input type="text" name="name" id="name" placeholder="Your name *" value="">
                                     <input type="text"  name="email" id="email" placeholder="Your email *" value="">
                                     <textarea name="comments"  id="comments" cols="40" rows="3" placeholder="Your message:"></textarea>
-                                    <button class="btn float-btn flat-btn color-bg" id="submit" type="submit">Send </button>
+                                    <button class="btn float-btn flat-btn color-bg" id="submit" type="submit">Send msg</button>
                                 </fieldset>
                             </form>
                         </div>
