--- a/contacts.html
+++ b/contacts.html
@@ -88,104 +88,109 @@
                         </div>
                         <div id="contact-form" class="fl-wrap">
                             <div id="message"></div>
-                            <form class="custom-form" action="php/contact.php" name="contactform" id="contactform">
+                            <form class="gform custom-form" method="POST" data-email="info@olivier-watches.com" action="https://script.google.com/macros/s/AKfycbywECqKbd6sPYwBOYTI6qhNIWDmNGlkngd74zawAl0Zgj0biAnmdgRS1gRQ6yuHamENpQ/exec">
                                 <fieldset>
-                                    <input type="text" name="name" id="name" placeholder="Your name *" value="">
-                                    <input type="text"  name="email" id="email" placeholder="Your email *" value="">
-                                    <textarea name="comments"  id="comments" cols="40" rows="3" placeholder="Your message:"></textarea>
-                                    <button type="submit" class="btn float-btn flat-btn color-bg" id="submit">Send </button>
-                                </fieldset>
-                            </form>
-                        </div>
-                    </div>
-                </section>
-                <!--section end  -->
-            </div>
-            <!-- column-wrapper -->
-            <!-- fixed-bottom-container -->
-            <div class="fixed-bottom-container">
+                                    <input type="text" name="name" placeholder="Your name *" value="">
+                                    <input type="text"  name="email"  placeholder="Your email *" value="">
+                                    <textarea name="message" cols="40" rows="3" placeholder="Your message:"></textarea>
+                                    <div style="display:none" class="thankyou_message">
+                                       <!-- You can customize the thankyou message by editing the code below -->
+                                       <h2 style="font-size: 14px; font-weight: 500; color: #fff; margin: 20px;">Thanks for contacting us. We will get back to you soon.
+                                       </h2>
+                                   </div>
+                                   <button type="submit" class="btn float-btn flat-btn color-bg" id="submit">Send </button>
+                               </fieldset>
+                           </form>
+                       </div>
+                   </div>
+               </section>
+               <!--section end  -->
+           </div>
+           <!-- column-wrapper -->
+           <!-- fixed-bottom-container -->
+           <div class="fixed-bottom-container">
 
-                <div class="page-scroll-nav">
-                    <nav class="scroll-init">
-                    </nav>
-                </div>
-                <div class="progress-bar-wrap">
-                    <div class="progress-bar color-bg"></div>
+            <div class="page-scroll-nav">
+                <nav class="scroll-init">
+                </nav>
+            </div>
+            <div class="progress-bar-wrap">
+                <div class="progress-bar color-bg"></div>
+            </div>
+        </div>
+        <!-- fixed-bottom-container end-->
+    </div>
+    <!-- content-holder end -->
+</div>
+<!-- wrapper end -->
+<!-- aside-column -->			
+<div class="aside-column">
+    <!-- social_links-->
+    <div class="header_social">
+        <ul>
+            <li><a href="https://instagram.com/olivier.watches" target="_blank">IG</a></li>
+            <li><a href="https://twitter.com/olivier_watches" target="_blank">X</a></li>
+        </ul>
+    </div>
+    <!-- social_links end-->			
+</div>
+<!-- aside-column  end -->			
+<!-- footer -->
+<footer class="main-footer">
+    <div class="footer_contacts">
+        <ul>
+            <li><a href="mailto:info@olivier-watches.com" target="_blank">Email us directly</a></li>
+        </ul>
+    </div>
+    <div class="policy-box">
+        Olivier Watches 2023. All rights reserved.  
+    </div>
+</footer>
+<div class="to-top-btn  to-top"><i class="fal fa-long-arrow-up"></i></div>
+<!-- footer end-->
+<div class="aside_dec"></div>
+<!-- sidebar-->
+<div class="sidebar-wrap">
+    <div class="sidebar-wrap-container">
+
+        <!-- sb-widget-wrap-->
+        <div class="sb-widget-wrap fl-wrap">
+            <h3>Newsletter</h3>
+            <div class="sb-widget  fl-wrap">
+                <p>If you'd like to hear the latest news and updates from our little workshop, make sure to subscribe to our newsletter.</p>
+                <div class="subcribe-form fl-wrap">
+                    <form id="subscribe">
+                        <input class="enteremail" name="email" id="subscribe-email" placeholder="Your Email" spellcheck="false" type="text">
+                        <button type="submit" id="subscribe-button" class="subscribe-button">Submit</button>
+                        <label for="subscribe-email" class="subscribe-message"></label>
+                    </form>
                 </div>
             </div>
-            <!-- fixed-bottom-container end-->
         </div>
-        <!-- content-holder end -->
-    </div>
-    <!-- wrapper end -->
-    <!-- aside-column -->			
-    <div class="aside-column">
-        <!-- social_links-->
-        <div class="header_social">
-            <ul>
-                <li><a href="https://instagram.com/olivier.watches" target="_blank">IG</a></li>
-                <li><a href="https://twitter.com/olivier_watches" target="_blank">X</a></li>
-            </ul>
-        </div>
-        <!-- social_links end-->			
-    </div>
-    <!-- aside-column  end -->			
-    <!-- footer -->
-    <footer class="main-footer">
-        <div class="footer_contacts">
-            <ul>
-                <li><a href="mailto:info@olivier-watches.com" target="_blank">Email us directly</a></li>
-            </ul>
-        </div>
-        <div class="policy-box">
-            Olivier Watches 2023. All rights reserved.  
-        </div>
-    </footer>
-    <div class="to-top-btn  to-top"><i class="fal fa-long-arrow-up"></i></div>
-    <!-- footer end-->
-    <div class="aside_dec"></div>
-    <!-- sidebar-->
-    <div class="sidebar-wrap">
-        <div class="sidebar-wrap-container">
-            
-            <!-- sb-widget-wrap-->
-            <div class="sb-widget-wrap fl-wrap">
-                <h3>Newsletter</h3>
-                <div class="sb-widget  fl-wrap">
-                    <p>If you'd like to hear the latest news and updates from our little workshop, make sure to subscribe to our newsletter.</p>
-                    <div class="subcribe-form fl-wrap">
-                        <form id="subscribe">
-                            <input class="enteremail" name="email" id="subscribe-email" placeholder="Your Email" spellcheck="false" type="text">
-                            <button type="submit" id="subscribe-button" class="subscribe-button">Submit</button>
-                            <label for="subscribe-email" class="subscribe-message"></label>
-                        </form>
-                    </div>
+        <!-- sb-widget-wrap end-->
+        <!-- sb-widget-wrap-->
+        <div class="sb-widget-wrap fl-wrap">
+            <h3>Socials</h3>
+            <div class="sb-widget    fl-wrap">
+                <div class="sidebar-social fl-wrap">
+                    <ul>
+                        <li><a href="https://instagram.com/olivier.watches" target="_blank">IG</a></li>
+                        <li><a href="https://twitter.com/olivier_watches" target="_blank">X</a></li>
+                    </ul>
                 </div>
             </div>
-            <!-- sb-widget-wrap end-->
-            <!-- sb-widget-wrap-->
-            <div class="sb-widget-wrap fl-wrap">
-                <h3>Socials</h3>
-                <div class="sb-widget    fl-wrap">
-                    <div class="sidebar-social fl-wrap">
-                        <ul>
-                            <li><a href="https://instagram.com/olivier.watches" target="_blank">IG</a></li>
-                            <li><a href="https://twitter.com/olivier_watches" target="_blank">X</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!-- sb-widget-wrap end-->
         </div>
+        <!-- sb-widget-wrap end-->
     </div>
-    <div class="sb-overlay"></div>
-    <!-- sidebar end-->				
+</div>
+<div class="sb-overlay"></div>
+<!-- sidebar end-->				
 </div>
 <!-- Main end -->
 <!--=============== scripts  ===============-->   
 <script  src="js/jquery.min.js"></script>
 <script  src="js/plugins.js"></script>
 <script  src="js/scripts.js"></script>
-<script  src="js/map.js"></script>
+<script data-cfasync="false" type="text/javascript" src="js/form-submission-handler.js"></script>
 </body>
 </html>
