Tidying up the contact form code

--- a/contacts.html
+++ b/contacts.html
@@ -91,14 +91,14 @@
                             <form class="gform custom-form" method="POST" data-email="info@olivier-watches.com" action="https://script.google.com/macros/s/AKfycbywECqKbd6sPYwBOYTI6qhNIWDmNGlkngd74zawAl0Zgj0biAnmdgRS1gRQ6yuHamENpQ/exec">
                                 <fieldset>
                                     <input type="text" name="name" placeholder="Your name *" value="" required>
-                                    <input type="email"  name="email"  placeholder="Your email *" value="" required>
-                                    <textarea name="message" cols="40" rows="3" placeholder="Your message: *" required></textarea>
+                                    <input type="email" name="email"  placeholder="Your email *" value="" required>
+                                    <textarea name="message" cols="40" rows="3" placeholder="Your message *" required></textarea>
                                     <div style="display:none" class="thankyou_message">
                                        <!-- You can customize the thankyou message by editing the code below -->
-                                       <h2 style="font-size: 14px; font-weight: 500; color: #fff; margin: 20px;">Thanks for contacting us. We will get back to you soon.
+                                       <h2 style="font-size: 14px; font-weight: 600; color: #fff; margin: 25px;">Thanks for contacting us. We will get back to you soon.
                                        </h2>
                                    </div>
-                                   <button type="submit" class="btn float-btn flat-btn color-bg" id="submit">Send </button>
+                                   <button type="submit" class="btn float-btn flat-btn color-bg">Send </button>
                                </fieldset>
                            </form>
                        </div>
