Adding meta description to all pages

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="Read the story of Olivier Watches, a small watchmaker focused on building custom, reliable, and timeless watches at affordable prices." />
   <title>About - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
