--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="For any inquiries you might have or if you wish to commission a build, feel free to contact us through the form." />
   <title>Contact - Olivier - We Build Timeless Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
