--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="We are Olivier Watches – a small watchmaker outlet focused on building custom, reliable, and timeless watches with great designs at affordable prices." />
   <title>Olivier - We Build Timeless Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
