--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="Showcase of all the custom timepieces we have built – diver, field, dress, GMT, casual, skeleton – any kind of watch you want. " />
   <title>Portfolio - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
