--- a/seiko-explorer.html
+++ b/seiko-explorer.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="A Seiko Explorer field watch homage build commissioned by a client, and made with Seiko's NH35 movement." />
   <title>Seiko Explorer Client Build - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
