--- a/the-gulfmaster.html
+++ b/the-gulfmaster.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="A Ford GT40 Gulf-inspired diver watch, with a size of only 40mm, and made with Seiko's NH35 automatic movement." />
   <title>The Gulfmaster - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
