--- a/the-stealth-skeleton.html
+++ b/the-stealth-skeleton.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="The Stealth Skeleton – a rose gold Yachtmaster-inspired Seiko diver with a skeletonized dial – is a treat." />
   <title>The Stealth Skeleton - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
