--- a/royal-blue-seiko-datejust.html
+++ b/royal-blue-seiko-datejust.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="A custom Royal Blue Seiko Datejust build with fluted details and roman numerals commissioned by a client." />
   <title>Royal Blue Seiko Datejust - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
