--- a/yellow-gold-datejust-the-tony.html
+++ b/yellow-gold-datejust-the-tony.html
@@ -13,6 +13,7 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="A yellow gold Seiko Datejust build inspired by the Daydate worn by the legendary TV mobster, Tony Soprano." />
   <title>The Tony Yellow Gold Datejust - Olivier Watches</title>
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
