Adding The Habibi

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,6 +99,18 @@
                         <!-- gallery-item-->
                         <div class="gallery-item models couples">
                             <div class="grid-item-holder  hov_zoom">
+                                <img  src="images/folio/the-pink-habibi-seiko-datejust-with-arabic-numerals-1.jpg"    alt="Rose Pink Seiko Datejust Mod with Arabic Numerals and Date">                                 
+                                <div class="grid-item-info">
+                                    <h3><a href="the-rose-habibi.html">The Rose Habibi</a></h3>
+                                    <p>"In a world full of colors, be the vibrant shade of pink.” - Alexandra Vasiliu</p>
+                                </div>
+                                <a href="images/folio/the-pink-habibi-seiko-datejust-with-arabic-numerals-1.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- gallery-item end--> 
+                        <!-- gallery-item-->
+                        <div class="gallery-item models couples">
+                            <div class="grid-item-holder  hov_zoom">
                                 <img  src="images/folio/royal-blue-seiko-datejust-roman-olivier-watches-3.jpg"    alt="Royal Blue Seiko Datejust Mod with Roman Numerals">                                 
                                 <div class="grid-item-info">
                                     <h3><a href="royal-blue-seiko-datejust.html">Seiko  Royal Blue Datejust</a></h3>
