--- a/index.html
+++ b/index.html
@@ -111,7 +111,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- swiper-slide-->									
+                            <!-- swiper-slide-->				
+                            <!-- swiper-slide-->
+                            <div class="swiper-slide"  >
+                                <div class="fslider-fw-item fl-wrap">
+                                    <div class="bg"  data-bg="images/bg/olivier-watches-the-rose-habibi-pink-datejust-build.jpg" data-swiper-parallax="20%"></div>
+                                    <div class="overlay"></div>
+                                    <div class="thumb-info">
+                                        <h3 style="font-weight: 600;"><a href="the-rose-habibi.html" class="ajax">The Rose Habibi</a></h3>
+                                        <p>“In a world full of colors, be the vibrant shade of pink.” - Alexandra Vasiliu</p>
+                                        <a href="the-rose-habibi.html" class="ajax fs-slider-item_btn">View case</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- swiper-slide-->			
                             <!-- swiper-slide-->
                             <div class="swiper-slide"  >
                                 <div class="fslider-fw-item fl-wrap">
