Adding WebSite structured data
In order for URL to show properly on Google Search

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <!--=============== basic  ===============-->
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="description" content="We are Olivier Watches – a small watchmaker outlet focused on building custom, reliable, and timeless watches with great designs at affordable prices." />
   <title>Olivier - We Build Timeless Watches</title>
+  <meta name="description" content="We are Olivier Watches – a small watchmaker outlet focused on building custom, reliable, and timeless watches with great designs at affordable prices." />
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
   <link type="text/css" rel="stylesheet" href="css/style.css">	
@@ -251,7 +251,16 @@
     <!-- sidebar end-->				
 </div>
 <!-- Main end -->
-<!--=============== scripts  ===============-->   
+<!--=============== scripts  ===============-->
+<script type="application/ld+json">
+    {
+      "@context" : "https://schema.org",
+      "@type" : "WebSite",
+      "name" : "Olivier Watches",
+      "alternateName" : "OW",
+      "url" : "https://olivier-watches.com/"
+  }
+</script>   
 <script  src="js/jquery.min.js"></script>
 <script  src="js/plugins.js"></script>
 <script  src="js/scripts.js"></script>
