Adding og:site_name meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Olivier - We Build Timeless Watches</title>
   <meta name="description" content="We are Olivier Watches – a small watchmaker outlet focused on building custom, reliable, and timeless watches with great designs at affordable prices." />
+  <meta property="og:site_name" content="Olivier Watches" />
   <!--=============== css  ===============-->	
   <link type="text/css" rel="stylesheet" href="css/plugins.css">
   <link type="text/css" rel="stylesheet" href="css/style.css">	
