Adding The Orange Monster

--- a/index.html
+++ b/index.html
@@ -125,7 +125,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- swiper-slide-->			
+                            <!-- swiper-slide-->	
+                            <!-- swiper-slide-->
+                            <div class="swiper-slide"  >
+                                <div class="fslider-fw-item fl-wrap">
+                                    <div class="bg"  data-bg="images/bg/olivier-watches-the-orange-black-seiko-yachtmaster-1.jpg" data-swiper-parallax="20%"></div>
+                                    <div class="overlay"></div>
+                                    <div class="thumb-info">
+                                        <h3 style="font-weight: 600;"><a href="the-orange-monster.html" class="ajax">The Orange Monster</a></h3>
+                                        <p>This Yachtmaster build is fun, sporty, and all-black – even the date is in black. However, its darkness breaks with bold orange details.</p>
+                                        <a href="the-orange-monster.html" class="ajax fs-slider-item_btn">View case</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- swiper-slide-->		
                             <!-- swiper-slide-->
                             <div class="swiper-slide"  >
                                 <div class="fslider-fw-item fl-wrap">
