--- a/portfolio.html
+++ b/portfolio.html
@@ -109,6 +109,18 @@
                         </div>
                         <!-- gallery-item end--> 
                         <!-- gallery-item-->
+                        <div class="gallery-item nature">
+                            <div class="grid-item-holder  hov_zoom">
+                                <img  src="images/folio/black-orange-seiko-yachtmaster-build-3.jpg"    alt="A black Seiko Yachtmaster diver watch build with orange details and rubber strap.">                                   
+                                <div class="grid-item-info">
+                                    <h3><a href="the-orange-monster.html">The Orange Monster</a></h3>
+                                    <p>This Yachtmaster build is fun, sporty, and all-black – even the date is in black. However, its darkness breaks with bold orange details.</p>
+                                </div>
+                                <a href="images/folio/black-orange-seiko-yachtmaster-build-3.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- gallery-item end-->
+                        <!-- gallery-item-->
                         <div class="gallery-item models couples">
                             <div class="grid-item-holder  hov_zoom">
                                 <img  src="images/folio/royal-blue-seiko-datejust-roman-olivier-watches-3.jpg"    alt="Royal Blue Seiko Datejust Mod with Roman Numerals">                                 
