Upload The Batman GMT files

--- a/index.html
+++ b/index.html
@@ -112,7 +112,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- swiper-slide-->				
+                            <!-- swiper-slide-->		
+                            <!-- swiper-slide-->
+                            <div class="swiper-slide"  >
+                                <div class="fslider-fw-item fl-wrap">
+                                    <div class="bg"  data-bg="images/bg/olivier-watches-batman-black-and-blue-gmt-seiko-build-1.jpg" data-swiper-parallax="20%"></div>
+                                    <div class="overlay"></div>
+                                    <div class="thumb-info">
+                                        <h3 style="font-weight: 600;"><a href="the-batman-gmt.html" class="ajax">The Batman GMT</a></h3>
+                                        <p>“It's not who you are underneath, it's what you do that defines you.”</p>
+                                        <a href="the-batman-gmt.html" class="ajax fs-slider-item_btn">View case</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- swiper-slide-->    		
                             <!-- swiper-slide-->
                             <div class="swiper-slide"  >
                                 <div class="fslider-fw-item fl-wrap">
@@ -148,19 +161,6 @@
                                         <h3 style="font-weight: 600;"><a href="royal-blue-seiko-datejust.html" class="ajax">  Royal Blue Datejust</a></h3>
                                         <p>"Midnight blue is the only color that can ever compete with black." - Christian Dior</p>
                                         <a href="royal-blue-seiko-datejust.html" class="ajax fs-slider-item_btn">View case</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- swiper-slide-->
-                            <!-- swiper-slide-->
-                            <div class="swiper-slide"  >
-                                <div class="fslider-fw-item fl-wrap">
-                                    <div class="bg"  data-bg="images/bg/olivier-watches-seiko-explorer-build.jpg" data-swiper-parallax="20%"></div>
-                                    <div class="overlay"></div>
-                                    <div class="thumb-info">
-                                        <h3 style="font-weight: 600;"><a href="seiko-explorer.html" class="ajax">The Seiko Explorer</a></h3>
-                                        <p>A client build based on the already legendary Seiko NH35 automatic movement. This timepiece is ready for any adventure you throw at it.</p>
-                                        <a href="seiko-explorer.html" class="ajax fs-slider-item_btn">View case</a>
                                     </div>
                                 </div>
                             </div>
