--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,18 @@
                         </div>
                         <!-- gallery-item end-->
                         <!-- gallery-item-->
+                        <div class="gallery-item nature">
+                            <div class="grid-item-holder  hov_zoom">
+                                <img  src="images/folio/black-and-blue-batman-gmt-seiko-build-5.jpg"    alt="Blue and black Seiko Batman GMT build with an NH34 automatic movement.">                                  
+                                <div class="grid-item-info">
+                                    <h3><a href="the-batman-gmt.html">The Batman GMT</a></h3>
+                                    <p>“It's not who you are underneath, it's what you do that defines you.”</p>
+                                </div>
+                                <a href="images/folio/black-and-blue-batman-gmt-seiko-build-5.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- gallery-item end-->
+                        <!-- gallery-item-->
                         <div class="gallery-item models couples">
                             <div class="grid-item-holder  hov_zoom">
                                 <img  src="images/folio/the-pink-habibi-seiko-datejust-with-arabic-numerals-1.jpg"    alt="Rose Pink Seiko Datejust Mod with Arabic Numerals and Date">                                 
@@ -121,18 +133,6 @@
                         </div>
                         <!-- gallery-item end-->
                         <!-- gallery-item-->
-                        <div class="gallery-item models couples">
-                            <div class="grid-item-holder  hov_zoom">
-                                <img  src="images/folio/royal-blue-seiko-datejust-roman-olivier-watches-3.jpg"    alt="Royal Blue Seiko Datejust Mod with Roman Numerals">                                 
-                                <div class="grid-item-info">
-                                    <h3><a href="royal-blue-seiko-datejust.html">Seiko  Royal Blue Datejust</a></h3>
-                                    <p>"Midnight blue is the only color that can ever compete with black." - Christian Dior</p>
-                                </div>
-                                <a href="images/folio/royal-blue-seiko-datejust-roman-olivier-watches-3.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
-                            </div>
-                        </div>
-                        <!-- gallery-item end--> 
-                        <!-- gallery-item-->
                         <div class="gallery-item portfolio_item_second models">
                             <div class="grid-item-holder  hov_zoom">
                                 <img  src="images/bg/olivier-watches-the-gulfmaster-diver-watch-2.jpg"    alt="The blue and orange Seiko Diver Build with White Dial.">                                   
@@ -143,8 +143,19 @@
                                 <a href="images/bg/olivier-watches-the-gulfmaster-diver-watch-2.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
                             </div>
                         </div>
-                        <!-- gallery-item end-->							
+                        <!-- gallery-item end-->    
                         <!-- gallery-item-->
+                        <div class="gallery-item models couples">
+                            <div class="grid-item-holder  hov_zoom">
+                                <img  src="images/folio/royal-blue-seiko-datejust-roman-olivier-watches-3.jpg"    alt="Royal Blue Seiko Datejust Mod with Roman Numerals">                                 
+                                <div class="grid-item-info">
+                                    <h3><a href="royal-blue-seiko-datejust.html">Seiko  Royal Blue Datejust</a></h3>
+                                    <p>"Midnight blue is the only color that can ever compete with black." - Christian Dior</p>
+                                </div>
+                                <a href="images/folio/royal-blue-seiko-datejust-roman-olivier-watches-3.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- gallery-item end-->				   <!-- gallery-item-->
                         <div class="gallery-item nature">
                             <div class="grid-item-holder  hov_zoom">
                                 <img  src="images/folio/olivier-watches-seiko-explorer-field-watch-build-3.jpg"    alt="Seiko Explorer Field Watch Build with NH35 movement.">                                   
