Add The Green Open Heart

--- a/portfolio.html
+++ b/portfolio.html
@@ -143,7 +143,19 @@
                                 <a href="images/bg/olivier-watches-the-gulfmaster-diver-watch-2.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
                             </div>
                         </div>
-                        <!-- gallery-item end-->    
+                        <!-- gallery-item end-->   
+                        <!-- gallery-item-->
+                        <div class="gallery-item models couples">
+                            <div class="grid-item-holder  hov_zoom">
+                                <img  src="images/folio/seiko-green-open-heart-nh-38-automatic-6.jpg"    alt="The green open heart Seiko dress watch build based on the NH38 movement.">                                 
+                                <div class="grid-item-info">
+                                    <h3><a href="the-green-open-heart.html">The Green Open Heart</a></h3>
+                                    <p>This partially-skeletonized dress watch invites you to witness the heartbeat of precision with every glance.</p>
+                                </div>
+                                <a href="images/folio/seiko-green-open-heart-nh-38-automatic-6.jpg" class="grid-media-zoom   image-popup"><i class="far fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- gallery-item end-->  
                         <!-- gallery-item-->
                         <div class="gallery-item models couples">
                             <div class="grid-item-holder  hov_zoom">
